[package]
name = "hanoi_tower"
version = "0.1.0"
authors = ["Pavel Levchenko <plevchenko.stud@ya.ru>"]
description = "A simple solver for Hanoi Tower puzzle"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
clap = "3.0"

[profile.release-lto]
inherits = "release"
lto = true
incremental = false
